<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageViewMostPopular"
        android:layout_width="@dimen/dp120"
        android:layout_height="@dimen/dp200"
        android:contentDescription="@string/image_description" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dp10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:baselineAligned="false"
            android:gravity="top"
            android:orientation="horizontal"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMovieTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp5"
                    android:text="@string/movie_title"
                    android:textSize="@dimen/sp18"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMovieDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp5"
                    android:text="@string/movie_date"
                    android:textSize="@dimen/sp16"
                    android:textStyle="italic" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="@dimen/dp64"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/progressBarPercent"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:indeterminateOnly="false"
                    android:progressDrawable="@drawable/rating_background"
                    tools:progress="66" />

                <TextView
                    android:id="@+id/textViewPercent"
                    android:layout_width="@dimen/dp50"
                    android:layout_height="@dimen/dp50"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/percent_66" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewMovieTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dp10"
                android:text="@string/movie_time" />

            <TextView
                android:id="@+id/textViewMovieDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="4"
                android:text="@string/movie_detail" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>