<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.MovieDetailActivity">

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/BtnPressedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp10"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/image_description"
        android:elevation="@dimen/dp2"
        android:padding="@dimen/dp20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutMovieDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:id="@+id/imageViewMovieDetail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp200"
            android:contentDescription="@string/image_description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:background="@drawable/border_detail_item"
            android:orientation="vertical"
            android:padding="@dimen/dp10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewMovieTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/movie_title"
                    android:textSize="@dimen/sp24"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewMovieDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp20"
                    android:text="@string/model_date_time"
                    android:textSize="@dimen/sp16"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp10"
                    android:text="@string/over_view"
                    android:textSize="@dimen/sp20"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp100">

                    <TextView
                        android:id="@+id/textViewMovieDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="fill"
                        android:padding="@dimen/dp10"
                        android:text="@string/image_description" />
                </ScrollView>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMovieGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBarMovieDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>